--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,237 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NA MU</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link 
+      rel="preconnect" 
+      href="https://fonts.gstatic.com" 
+      crossorigin=" "
+    >
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link  rel="icon" 
+        type="image/x-icon" 
+        href="images/fav-museum.ico"
+      >
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+
+  <body class="page__body">
+    <header class="header">
+      <div class="header__block">
+        <div class="header__nav">
+          <a href="#menu" class="header__menu-opener"></a>
+          <a href="#" class="logo">NA<br>MU</a>
+        </div>
+      </div>
+      <div class="header__block-title">
+        <h1 class="header__title">ХУДОЖНІЙ<br>МУЗЕЙ</h1>
+        <a href="#podiji" class="header__tickets">
+          <span class="header__tickets-item">Квитки</span>
+          <span class="arrow-block"></span>
+        </a>
+        <span class="header__text">ПОДІЇ</span>
+      </div>
+
+      <div class="header__block header__block-mob" id="menu">
+        <div class="header__flex">
+          <a href="#" class="header__cross"></a>
+
+          <div class="header__nav header__nav-mob">
+            <nav class="menu">
+              <a class="menu__item" href="#galery">Галерея</a>
+              <a class="menu__item" href="#digest">Про Нас</a>
+              <a class="menu__item" href="#podiji">Виставки та<br>події</a>
+              <a class="menu__item" href="#contacts">Контакти</a>
+            </nav>
+          </div>
+          <div class="menu__schedule">
+            <p>Графік роботи</p>
+            <p><span class="menu__schedule-bold">12:00 — 20:00</span> середа<br><span class="menu__schedule-bold">12:00 — 20:00</span> четвер<br><span class="menu__schedule-bold">12:00 — 20:00</span> п’ятниця<br><span class="menu__schedule-bold">11:00 — 19:00</span> субота<br><span class="menu__schedule-bold">11:00 — 19:00</span> неділя</p>
+          </div>
+          <div class="menu__weekends">
+            <p class="menu__schedule"><span class="menu__schedule-bold">Вихідні:</span> понеділок, вівторок<br>Каса припиняє роботу за 1 годину до<br> закриття музею</p>
+          </div>
+        
+        </div>
+      </div>
+
+    </header>
+
+    <main class="section-podiji" id="podiji">
+      <div class="container">
+        <h2 class="section-podiji__title">Актуальні події</h2>
+
+        <div class="section-podiji__container">
+          <img 
+            class="section-podiji__img"
+            src="images/picture-sea.png" 
+            alt="picture of the trees and sea"
+          >
+          <div class="section-podiji__block-text">
+            <div class="section-podiji__description">
+              <span class="section-podiji__name">ВИСТАВКА</span>
+              <span class="section-podiji__date">26.08-29.11.2019</span>
+            </div>
+            <div class="section-podiji__block">
+              <h3 class="section-podiji__article">Йду і повертаюсь</h3>
+              <div class="section-podiji__rectangle"></div>
+            </div>
+            <p class="section-podiji__paragraph">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+          </div>
+        </div>
+
+        <div class="section-podiji__container">
+          <img 
+            class="section-podiji__img" 
+            src="images/picture-girl.png" 
+            alt="picture of a girl"
+          >
+          <div class="section-podiji__block-text">
+            <div class="section-podiji__description">
+              <span class="section-podiji__name">ВИСТАВКА</span>
+              <span class="section-podiji__date">26.08-29.11.2019</span>
+            </div>
+            <div class="section-podiji__block">
+              <h3 class="section-podiji__article">І спогади і мрії</h3>
+              <div class="section-podiji__rectangle"></div>
+            </div>
+            <p class="section-podiji__paragraph">Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="section-podiji__lection"></div>
+      <div class="section-podiji__lection-block">
+        <span class="section-podiji__name section-podiji__name-mar">ЛЕКЦІЯ</span>
+        <span class="section-podiji__date section-podiji__date-mar">26/08/2019 - 11:00</span>
+        <h3 class="section-podiji__article">Від класицизму до<br>романтизму</h3>
+      </div>
+
+      <div class="galery" id="galery">
+        <h2 class="galery-section__title">Галерея</h2>
+        <div class="galery-section">
+          <img 
+            src="images/galery-woman.png" 
+            alt="woman in traditional clothes"
+            class="galery-section__woman"
+          >
+          <img 
+            src="images/galery-goose.png" 
+            alt="gooses"
+            class="galery-section__goose"
+          >
+
+          <img 
+            src="images/galery-house.png" 
+            alt="ukrainian-house"
+            class="galery-section__house"
+          >
+
+          <img 
+            src="images/galery-park.png" 
+            alt="park"
+            class="galery-section__park"
+          >
+
+          <img 
+            src="images/galery-sea.png" 
+            alt="sea"
+            class="galery-section__sea"
+          >
+        </div>
+
+        <div class="galery-section__scroll">
+          <span class="galery-section__scroll-item section-galery__scroll-item--green"></span>
+          <span class="galery-section__scroll-item"></span>
+          <span class="galery-section__scroll-item"></span>
+          <span class="galery-section__scroll-item"></span>
+        </div>
+      </div>
+
+
+      <div class="subscription" id="digest">
+        <div class="container">
+          <div class="subscription__content">
+            <h2 class="subscription__title">Підписка</h2>
+            <p class="subscription__paragraph">Бути в курсі всіх актуальних подій та останніх новин.</p>
+            <form 
+              action=" " 
+              class="subscription__form" 
+              id="submitForm"
+            >
+              <input 
+                name="email" 
+                type="email" 
+                class="subscription__input" 
+                placeholder="EMAIL" 
+                required
+              >
+
+              <button class="arrow-block arrow-block--red"></button>
+            </form>
+          </div>
+        </div>
+      </div>
+
+      <footer class="general-grid container contacts" id="contacts">
+        <div class="contacts__logo">
+          <a href="#" class="logo logo--contacts">NA<br>MU</a>
+          <a 
+            href="https://www.facebook.com/" 
+            class="contacts__facebook" 
+            target="_blank"
+          >
+            <img src="/images/facebook-icon.svg" alt="facebook icon">
+          </a>
+          <a 
+            href="https://www.instagram.com/" 
+            class="contacts__instagram" 
+            target="_blank"
+          >
+            <img src="/images/instagram-icon.png" alt="facebook icon">
+          </a>
+        </div>
+
+        <div class="contacts-content">
+          <p class="contacts-content__paragraph">Графік роботи</p>
+          <p class="contacts-content__paragraph"><span class="contacts-content__paragraph--bold">12:00 — 20:00</span> середа<br><span class="contacts-content__paragraph--bold">12:00 — 20:00</span>  четвер<br><span class="contacts-content__paragraph--bold">12:00 — 20:00</span> п’ятниця<br><span class="contacts-content__paragraph--bold">11:00 — 19:00</span> субота<br><span class="contacts-content__paragraph--bold">11:00 — 19:00</span> неділя</p>
+          <p class="contacts-content__paragraph"><span class="contacts-content__paragraph--bold">Вихідні:</span> понеділок, вівторок<br>Каса припиняє роботу за 1 годину до закриття музею</p>
+        </div>
+
+        <div class="contacts__address">
+          <p>Контакти:</p>
+          <p>вул. М. Грушевського, 6; Київ, 01001<br>
+            тел. +38 (044) 278-13-57<br>
+            факс +38 (044) 278-74-54<br>
+            e-mail: info@namu.kiev.ua
+          </p>
+        </div>
+
+        <a href="#" class="arrow-menu"></a>
+
+        <nav class="menu-footer">
+          <a class="menu-footer__item" href="#galery">Галерея</a>
+          <a class="menu-footer__item menu-footer__item--pad" href="#digest">Про Нас</a>
+          <a class="menu-footer__item" href="#podiji">Виставки та<br>події</a>
+          <a class="menu-footer__item menu-footer__item--pad" href="#contacts">Контакти</a>
+        </nav>
+
+        <div class="cred">
+          <span>Designed by Zhyriada Marina</span>
+          <span>Copyright © 2019. All Rights Reserved.</span>
+        </div>
+      </footer>
+
+      
+    </main>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
+
 </html>
