--- a/src/index.html
+++ b/src/index.html
@@ -105,15 +105,17 @@
                 <div class="menu__block__container">
                   <div class="menu__block__schedule">Графік роботи</div>
                   <div class="menu__block__time">
-                    <div class="menu__block__time__items">12:00 — 20:00 середа<br>
-                      12:00 — 20:00 четвер<br>
-                      12:00 — 20:00 п’ятниця<br>
-                      11:00 — 19:00 субота<br>
-                      11:00 — 19:00 неділя
+                    <div class="menu__block__time__items">
+                      <strong>12:00 — 20:00</strong> середа<br>
+                      <strong>12:00 — 20:00</strong> четвер<br>
+                      <strong>12:00 — 20:00</strong> п’ятниця<br>
+                      <strong>11:00 — 19:00</strong> субота<br>
+                      <strong>11:00 — 19:00</strong> неділя
                     </div>
                   </div>
                 </div>
-                <div class="menu__block__days">Вихідні: понеділок, вівторок<br>
+                <div class="menu__block__days">
+                  <strong>Вихідні:</strong> понеділок, вівторок<br>
                   Каса припиняє роботу за 1 годину
                   до закриття музею
                 </div>
@@ -213,74 +215,47 @@
         <h1 class="gallery__name">
           Галерея
         </h1>
-        <div class="gallery__slideshow-container grid grid--tablet grid--desktop ">
-
+        <div class="gallery__slideshow-container grid grid--desktop ">
           <div class="
             gallery__slideshow-container__mySlides
+            gallery__slideshow-container__mySlides--1
             gallery__fade
-            grid__item--tablet-1-3
             grid__item--desktop-1-4">
-            <img
-              src="./images/photos/gallery/1.svg"
-              alt="1"
-              class="gallery__slideshow-container__photo">
           </div>
 
           <div class="
             gallery__slideshow-container__mySlides
+            gallery__slideshow-container__mySlides--2
             gallery__fade
-            grid__item--desktop-5-12
-            tablet
-            phone">
-            <img
-              src="./images/photos/gallery/2.svg"
-              alt="2"
-              class="gallery__slideshow-container__photo">
+            grid__item--desktop-5-12">
           </div>
 
           <div class="
             gallery__slideshow-container__mySlides
+            gallery__slideshow-container__mySlides--3
             gallery__fade
-            grid__item--desktop-1-8
-            phone
-            tablet">
-            <img
-              src="./images/photos/gallery/3.svg"
-              alt="3"
-              class="gallery__slideshow-container__photo">
+            grid__item--desktop-1-8">
           </div>
 
           <div class="
            gallery__slideshow-container__mySlides
+           gallery__slideshow-container__mySlides--4
            gallery__fade
-           grid__item--desktop-9-12
-           phone
-           tablet">
-            <img
-              src="./images/photos/gallery/4.svg"
-              alt="4"
-              class="gallery__slideshow-container__photo">
+           grid__item--desktop-9-12">
           </div>
 
           <div class="
            gallery__slideshow-container__mySlides
-           gallery__fade
-           grid__item--tablet-4-6
-           phone
-           desktop">
-            <img
-              src="./images/photos/gallery/5.svg"
-              alt="4"
-              class="gallery__slideshow-container__photo">
+           gallery__slideshow-container__mySlides--5
+           gallery__fade">
           </div>
-
-          <div class="gallery__items grid__item--tablet-3-4">
-            <span class="gallery__dot desktop " onclick="currentSlide(1)"></span>
-            <span class="gallery__dot desktop" onclick="currentSlide(2)"></span>
-            <span class="gallery__dot desktop" onclick="currentSlide(3)"></span>
-            <span class="gallery__dot desktop" onclick="currentSlide(4)"></span>
-            <span class="gallery__dot tablet desktop" onclick="currentSlide(5)"></span>
-          </div>
+        </div>
+        <div class="gallery__items">
+          <span class="gallery__dot desktop " onclick="currentSlide(1)"></span>
+          <span class="gallery__dot desktop" onclick="currentSlide(2)"></span>
+          <span class="gallery__dot desktop" onclick="currentSlide(3)"></span>
+          <span class="gallery__dot desktop" onclick="currentSlide(4)"></span>
+          <span class="gallery__dot tablet desktop" onclick="currentSlide(5)"></span>
         </div>
       </div>
 
@@ -352,11 +327,12 @@
             <div class="footer__second__container">
               <div class="footer__second__schedule">Графік роботи</div>
               <div class="footer__second__time">
-                <div class="footer__second__time__items">12:00 — 20:00 середа<br>
-                  12:00 — 20:00 четвер<br>
-                  12:00 — 20:00 п’ятниця<br>
-                  11:00 — 19:00 субота<br>
-                  11:00 — 19:00 неділя
+                <div class="footer__second__time__items">
+                  <strong>12:00 — 20:00</strong> середа<br>
+                  <strong>12:00 — 20:00</strong> четвер<br>
+                  <strong>12:00 — 20:00</strong> п’ятниця<br>
+                  <strong>11:00 — 19:00</strong> субота<br>
+                  <strong>11:00 — 19:00</strong> неділя
                 </div>
               </div>
             </div>
