--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,357 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Музей</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/NA MU.svg"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="body body-menu">
     <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="header">
+      <div class="container">
+        <div class="nav">
+          <a href="#menu" class="nav__hidden">
+            <img
+              src="./images/menu.svg"
+              alt="menu"
+              class="nav__menu" >
+          </a>
+          <a href="#" class="nav__logo">
+            NA <br> MU
+          </a>
+        </div>
+        <div class="grid">
+          <div class="
+          grid__item
+          grid__item--1-5
+          grid__item--tablet-1-3">
+            <h1 class="header__title">
+              Художній музей
+            </h1>
+          </div>
+          <div class="
+          grid__item
+          grid__item--3-5
+          grid__item--tablet-1-3">
+            <a href="#events" class="header__tickets">
+              <img
+                src="./images/tickets.svg"
+                alt="tickets"
+                class="header__btn" >
+            </a>
+          </div>
+        </div>
+
+      </div>
+      <nav class="menu" id="menu">
+        <div class="menu__background">
+          <div class="container">
+
+            <div class="menu__container">
+
+
+              <div class="menu__list">
+                <a href="#" class="menu__cross">
+                  <img
+                    src="./images/cross.svg"
+                    alt="cross"
+                    class="menu__icon" >
+                </a>
+                <div class="menu__nav">
+                  <a href="#galery" class="menu__link">Галерея</a>
+                  <a href="#events" class="menu__link">Виставки та події</a>
+                </div>
+                <div class="menu__nav">
+                  <a href="#about-us" class="menu__link">Про Нас</a>
+                  <a href="#contacts" class="menu__link">Контакти</a>
+                </div>
+              </div>
+              <div class="menu__info">
+                <p class="menu__schedule menu__text">Графік роботи</p>
+                <div class="menu__work">
+                  <div class="menu__working">
+                    <div class="menu__time-day">
+                        12:00 — 20:00 <span class="menu__text">середа</span>
+
+                    </div>
+                    <div class="menu__time-day">
+                        12:00 — 20:00
+                      <span class="menu__text">четвер</span>
+                    </div>
+                    <div class="menu__time-day">
+                        12:00 — 20:00
+                      <span class="menu__text">п’ятниця</span>
+                    </div>
+                    <div class="menu__time-day">
+                        11:00 — 19:00
+                      <span class="menu__text">субота</span>
+                    </div>
+                    <div class="menu__time-day">
+                        11:00 — 19:00
+                      <span class="menu__text">субота</span>
+                    </div>
+
+                  </div>
+                  <div class="menu__rest"> Вихідні:
+                    <span class="menu__text">понеділок, вівторок
+                    Каса припиняє роботу за 1 годину
+                    до закриття музею
+                    </span>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </nav>
+
+    </header>
+    <main class="main">
+      <section class="section-one">
+        <div class="container">
+          <h2 class="section-one__title" id="events">Актуальні події</h2>
+          <div class="section-one__place">
+            <div class="section-one__photo-container">
+              <img
+            src="../src/images/photos/1.jpg"
+            alt="photo1"
+            class="section-one__photo">
+            </div>
+            <div class="section-one__about">
+              <div class="section-one__name-date">
+                <p class="section-one__name">Виставка</p>
+                <p class="section-one__date"> 26.08-29.11.2019</p>
+              </div>
+              <div class="section-one__title-icon">
+                <h3 class="section-one__photo-title">Йду і повертаюсь
+                </h3>
+                <span class="section-one__icon">
+                  <svg
+                  width="15"
+                  height="15"
+                  viewBox="0 0 15 15"
+                  fill="#F14A27"
+                  xmlns="http://www.w3.org/2000/svg">
+                    <rect width="15" height="15" >
+                  </svg>
+                </span>
+              </div>
+              <p class="section-one__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+            </div>
+          </div>
+          <div class="section-one__place">
+            <div class="section-one__photo-container">
+              <img
+            src="../src/images/photos/2.jpg"
+            alt="photo1"
+            class="section-one__photo">
+
+            </div>
+            <div class="section-one__about">
+              <div class="section-one__name-date">
+                <p class="section-one__name">Виставка</p>
+                <p class="section-one__date"> 26.08-29.11.2019</p>
+              </div>
+              <div  class="section-one__title-icon">
+                <h3 class="section-one__photo-title">І спогади і мрії</h3>
+                <span class="section-one__icon">
+                  <svg
+                  width="15"
+                  height="15"
+                  viewBox="0 0 15 15"
+                  fill="#F14A27"
+                  xmlns="http://www.w3.org/2000/svg">
+                    <rect width="15" height="15" >
+                  </svg>
+                </span>
+              </div>
+              <p class="section-one__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-two">
+        <div class="section-two__sticker-container">
+          <div class="section-two__name-date">
+            <p class="section-one__name">Лекція</p>
+            <p class="section-one__date"> 26.08-29.11.2019</p>
+          </div>
+          <h3 class="section-two__photo-title">Від класицизму до романтизму</h3>
+
+        </div>
+      </section>
+      <section class="section-three">
+        <div class="container">
+          <h2 class="section-three__title" id="galery">Галерея</h2>
+          <div class="section-three__place">
+            <div class="section-three__photo-container" id="photo1">
+              <img
+              src="../src/images/photos/photo1.jpg"
+              alt="photo1"
+              class="section-three__photo">
+            </div>
+            <div class="section-three__photo-container" id="photo2">
+              <img
+              src="../src/images/photos/photo2.jpg"
+              alt="photo2"
+              class="section-three__photo">
+            </div>
+            <div
+            class="section-three__photo-container section-three__photo-container-small"
+            id="photo3"
+            >
+              <img
+              src="../src/images/photos/photo3.jpg"
+              alt="photo3"
+              class="section-three__photo">
+            </div>
+            <div
+            class="section-three__photo-container section-three__photo-container-small"
+            id="photo4"
+            >
+              <img
+              src="../src/images/photos/photo4.jpg"
+              alt="photo4"
+              class="section-three__photo">
+            </div>
+
+          </div>
+          <div class="section-three__sliders">
+            <a href="#photo1" class="section-three__slider"></a>
+            <a href="#photo2" class="section-three__slider"></a>
+            <a href="#photo3" class="section-three__slider"></a>
+            <a href="#photo4" class="section-three__slider"></a>
+
+          </div>
+
+        </div>
+      </section>
+      <section class="section-four">
+        <h2 class="section-four__title" id="about-us">Підписка</h2>
+        <p class="section-four__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+        <form action="post" class="section-four__button-container contact-us__form">
+          <label for="email"></label>
+          <input id="email"
+                 name="email"
+                 type="email"
+                 placeholder="E-mail"
+                 class="section-four__email"
+                 required>
+          <button type="submit"
+                  class="section-four__button"
+                  name="submit">
+          </button>
+        </form>
+      </section>
+
+    </main>
+    <footer class="footer">
+      <div class="container footer__container">
+        <div class="footer__block-one">
+          <div class="footer__nav">
+            <a href="#" class="nav__logo">
+              NA <br> MU
+            </a>
+            <div class="footer__social">
+              <a
+                  href="https://www.facebook.com/"
+                  class="footer__fb footer__icon"
+                  target="_blank"
+                  >
+              </a>
+              <a
+                  href="https://www.instagram.com/"
+                  class="footer__inst footer__icon"
+                  target="_blank"
+                  >
+              </a>
+            </div>
+
+          </div>
+          <div class="footer__info">
+            <div class="footer__working-days">
+              <p class="footer__schedule footer__text">Графік роботи</p>
+              <div class="footer__work">
+                <div class="footer__working">
+                  <div class="footer__time-day">
+                      12:00 — 20:00 <span class="footer__text">середа</span>
+
+                  </div>
+                  <div class="footer__time-day">
+                      12:00 — 20:00
+                    <span class="footer__text">четвер</span>
+                  </div>
+                  <div class="footer__time-day">
+                      12:00 — 20:00
+                    <span class="footer__text">п’ятниця</span>
+                  </div>
+                  <div class="footer__time-day">
+                      11:00 — 19:00
+                    <span class="footer__text">субота</span>
+                  </div>
+                  <div class="footer__time-day">
+                      11:00 — 19:00
+                    <span class="footer__text">субота</span>
+                  </div>
+
+                </div>
+                <div class="footer__time-day"> Вихідні:
+                  <span class="footer__text">понеділок, вівторок
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                  </span>
+                </div>
+
+              </div>
+            </div>
+            <div class="footer__contact">
+              <p class=" footer__text" id="contacts" >Контакти:</p>
+              <div class="footer__contacts">
+                <a
+                href="https://goo.gl/maps/UPwZZ5YGzskXcDWE8"
+                class="footer__link"
+                target="_blank">вул. М. Грушевського, 6; Київ, 01001</a>
+                <a href="tel: +38 (044) 278-13-57" class="footer__link" >+38 (044) 278-13-57</a>
+                <a href="tel: +38 (044) 278-74-54" class="footer__link" >+38 (044) 278-74-54</a>
+                <a href="mailto: info@namu.kiev.ua" class="footer__link" > e-mail: info@namu.kiev.ua</a>
+              </div>
+            </div>
+          </div>
+          <div class="footer__arrow">
+            <a href="#" class="footer__up"></a>
+          </div>
+
+        </div>
+        <div class="footer__menu">
+          <div class="footer__navi">
+            <a href="#galery" class="footer__link">Галерея</a>
+            <a href="#events" class="footer__link">Виставки та події</a>
+          </div>
+          <div class="footer__navi">
+            <a href="#about-us" class="footer__link">Про Нас</a>
+            <a href="#contacts" class="footer__link">Контакти</a>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="footer__block-two">
+          <div class="footer__copy">Copyright © 2019. All Rights Reserved.</div>
+          <div class="footer__copy">Designed by Zhyriada Marina</div>
+        </div>
+      </div>
+
+    </footer>
   </body>
 </html>
