--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,11 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap"
       rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
-    <link  rel="icon" 
-        type="image/x-icon" 
-        href="images/fav-museum.ico"
-      >
+    <link 
+      rel="icon" 
+      type="image/x-icon" 
+      href="images/fav-museum.ico"
+    >
   </head>
 
   <body class="page__body">
@@ -38,26 +39,30 @@
         <span class="header__text">ПОДІЇ</span>
       </div>
 
-      <div class="header__block header__block-mob" id="menu">
-        <div class="header__flex">
-          <a href="#" class="header__cross"></a>
+      <div class="header__block-overlay" id="menu">
+        <div class="header__block header__block-mob">
+          <div class="header__flex">
+            <a href="#" class="header__cross"></a>
 
-          <div class="header__nav header__nav-mob">
-            <nav class="menu">
-              <a class="menu__item" href="#galery">Галерея</a>
-              <a class="menu__item" href="#digest">Про Нас</a>
-              <a class="menu__item" href="#podiji">Виставки та<br>події</a>
-              <a class="menu__item" href="#contacts">Контакти</a>
-            </nav>
+            <div class="header__nav header__nav-mob">
+              <nav class="menu">
+                <a class="menu__item" href="#galery">Галерея</a>
+                <a class="menu__item" href="#digest">Про Нас</a>
+                <a class="menu__item" href="#podiji">Виставки та<br>події</a>
+                <a class="menu__item" href="#contacts">Контакти</a>
+              </nav>
+            </div>
+            <div class="menu__schedule">
+              <p>Графік роботи</p>
+              <p>
+                <span class="menu__schedule-bold">12:00 — 20:00</span> середа<br><span class="menu__schedule-bold">12:00 — 20:00</span> четвер<br><span class="menu__schedule-bold">12:00 — 20:00</span> п’ятниця<br><span class="menu__schedule-bold">11:00 — 19:00</span> субота<br><span class="menu__schedule-bold">11:00 — 19:00</span> неділя
+              </p>
+            </div>
+            <div class="menu__weekends">
+              <p class="menu__schedule"><span class="menu__schedule-bold">Вихідні:</span> понеділок, вівторок<br>Каса припиняє роботу за 1 годину до<br> закриття музею</p>
+            </div>
+
           </div>
-          <div class="menu__schedule">
-            <p>Графік роботи</p>
-            <p><span class="menu__schedule-bold">12:00 — 20:00</span> середа<br><span class="menu__schedule-bold">12:00 — 20:00</span> четвер<br><span class="menu__schedule-bold">12:00 — 20:00</span> п’ятниця<br><span class="menu__schedule-bold">11:00 — 19:00</span> субота<br><span class="menu__schedule-bold">11:00 — 19:00</span> неділя</p>
-          </div>
-          <div class="menu__weekends">
-            <p class="menu__schedule"><span class="menu__schedule-bold">Вихідні:</span> понеділок, вівторок<br>Каса припиняє роботу за 1 годину до<br> закриття музею</p>
-          </div>
-        
         </div>
       </div>
 
@@ -69,7 +74,7 @@
 
         <div class="section-podiji__container">
           <img 
-            class="section-podiji__img"
+            class="section-podiji__img" 
             src="images/picture-sea.png" 
             alt="picture of the trees and sea"
           >
@@ -79,7 +84,7 @@
               <span class="section-podiji__date">26.08-29.11.2019</span>
             </div>
             <div class="section-podiji__block">
-              <h3 class="section-podiji__article">Йду і повертаюсь</h3>
+              <h3 class="section-podiji__article">Йду&nbspі&nbspповертаюсь</h3>
               <div class="section-podiji__rectangle"></div>
             </div>
             <p class="section-podiji__paragraph">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
@@ -110,7 +115,7 @@
       <div class="section-podiji__lection-block">
         <span class="section-podiji__name section-podiji__name-mar">ЛЕКЦІЯ</span>
         <span class="section-podiji__date section-podiji__date-mar">26/08/2019 - 11:00</span>
-        <h3 class="section-podiji__article">Від класицизму до<br>романтизму</h3>
+        <h3 class="section-podiji__article">Від класицизму до романтизму</h3>
       </div>
 
       <div class="galery" id="galery">
@@ -118,30 +123,30 @@
         <div class="galery-section">
           <img 
             src="images/galery-woman.png" 
-            alt="woman in traditional clothes"
+            alt="woman in traditional clothes" 
             class="galery-section__woman"
           >
           <img 
-            src="images/galery-goose.png" 
-            alt="gooses"
+            src="images/galery-goose.png"
+            alt="gooses" 
             class="galery-section__goose"
           >
 
           <img 
             src="images/galery-house.png" 
-            alt="ukrainian-house"
+            alt="ukrainian-house" 
             class="galery-section__house"
           >
 
           <img 
             src="images/galery-park.png" 
-            alt="park"
+            alt="park" 
             class="galery-section__park"
           >
 
           <img 
             src="images/galery-sea.png" 
-            alt="sea"
+            alt="sea" 
             class="galery-section__sea"
           >
         </div>
@@ -184,7 +189,7 @@
           <a href="#" class="logo logo--contacts">NA<br>MU</a>
           <a 
             href="https://www.facebook.com/" 
-            class="contacts__facebook" 
+            class="contacts__facebook"
             target="_blank"
           >
             <img src="/images/facebook-icon.svg" alt="facebook icon">
@@ -200,16 +205,23 @@
 
         <div class="contacts-content">
           <p class="contacts-content__paragraph">Графік роботи</p>
-          <p class="contacts-content__paragraph"><span class="contacts-content__paragraph--bold">12:00 — 20:00</span> середа<br><span class="contacts-content__paragraph--bold">12:00 — 20:00</span>  четвер<br><span class="contacts-content__paragraph--bold">12:00 — 20:00</span> п’ятниця<br><span class="contacts-content__paragraph--bold">11:00 — 19:00</span> субота<br><span class="contacts-content__paragraph--bold">11:00 — 19:00</span> неділя</p>
-          <p class="contacts-content__paragraph"><span class="contacts-content__paragraph--bold">Вихідні:</span> понеділок, вівторок<br>Каса припиняє роботу за 1 годину до закриття музею</p>
+          <p class="contacts-content__paragraph">
+            <span class="contacts-content__paragraph--bold">12:00 — 20:00</span> середа<br><span class="contacts-content__paragraph--bold">12:00 — 20:00</span> четвер<br><span
+              class="contacts-content__paragraph--bold">12:00 — 20:00</span> п’ятниця<br><span
+              class="contacts-content__paragraph--bold">11:00 — 19:00</span> субота<br><span
+              class="contacts-content__paragraph--bold">11:00 — 19:00</span> неділя
+          </p>
+          <p class="contacts-content__paragraph">
+            <span class="contacts-content__paragraph--bold">Вихідні:</span> понеділок, вівторок<br>Каса припиняє роботу за 1 годину до закриття музею
+          </p>
         </div>
 
         <div class="contacts__address">
           <p>Контакти:</p>
           <p>вул. М. Грушевського, 6; Київ, 01001<br>
             <a href="tel:+38 (044) 278-13-57" class="contacts__address-links">тел. +38 (044) 278-13-57</a> <br>
-            <a href="tel:+38 (044) 278-74-54"  class="contacts__address-links">факс +38 (044) 278-74-54</a> <br>
-            <a href="mailto:info@namu.kiev.ua"  class="contacts__address-links">e-mail: info@namu.kiev.ua</a>
+            <a href="tel:+38 (044) 278-74-54" class="contacts__address-links">факс +38 (044) 278-74-54</a> <br>
+            <a href="mailto:info@namu.kiev.ua" class="contacts__address-links">e-mail: info@namu.kiev.ua</a>
           </p>
         </div>
 
@@ -228,7 +240,7 @@
         </div>
       </footer>
 
-      
+
     </main>
 
     <script type="text/javascript" src="scripts/main.js"></script>
